re PR java/21519 (ICE in generate_bytecode_conditional, at java/jcf-write.c:1337)

gcc/java:
	PR java/21519:
	* jcf-write.c (generate_bytecode_insns) <SAVE_EXPR>: Don't call
	NOTE_PUSH.
libjava:
	PR java/21519:
	* testsuite/libjava.compile/pr21519.java: New file.
	* testsuite/libjava.compile/pr21519.no-link: New file.

From-SVN: r99739